[gd_scene load_steps=5 format=2]

[ext_resource path="res://SimpleTypingGame/Scripts/SimpleTypingMain.gd" type="Script" id=1]
[ext_resource path="res://SimpleTypingGame/Assets/Fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="SimpleTypingMain" type="Node2D"]
script = ExtResource( 1 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 1.95068
margin_top = 111.0
margin_right = 1029.95
margin_bottom = 564.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper elementum accumsan. Quisque aliquet ultrices risus, eu vestibulum ante. Aliquam quis velit condimentum, ultrices felis sit amet, bibendum magna. Sed aliquet efficitur malesuada. Suspendisse id magna interdum, feugiat elit quis, vestibulum tortor. In hac habitasse platea dictumst. Phasellus ut turpis commodo, gravida magna eget, vestibulum enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque faucibus nisi urna, a interdum enim rhoncus et. Donec non nisi malesuada lacus sagittis dictum."
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper elementum accumsan. Quisque aliquet ultrices risus, eu vestibulum ante. Aliquam quis velit condimentum, ultrices felis sit amet, bibendum magna. Sed aliquet efficitur malesuada. Suspendisse id magna interdum, feugiat elit quis, vestibulum tortor. In hac habitasse platea dictumst. Phasellus ut turpis commodo, gravida magna eget, vestibulum enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque faucibus nisi urna, a interdum enim rhoncus et. Donec non nisi malesuada lacus sagittis dictum."

[node name="InputDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="MsTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="TimerLabel" type="Label" parent="."]
margin_top = 27.0
margin_right = 1022.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[connection signal="timeout" from="InputDelay" to="." method="_on_InputDelay_timeout"]
[connection signal="timeout" from="MsTimer" to="." method="_on_MsTimer_timeout"]
